manifests/claudie/builder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: builder
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: builder
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: builder
    spec:
      terminationGracePeriodSeconds: 5400
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: builder
          imagePullPolicy: Always
          image: ghcr.io/berops/claudie/builder
          resources:
            requests:
              cpu: 10m
              memory: 15Mi
            limits:
              memory: 20Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          ports:
            - name: "metrics"
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /health
              port: 50051
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 50051
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 3
            periodSeconds: 30
