manifests/claudie/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: scheduler
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: scheduler
    spec:
      terminationGracePeriodSeconds: 300
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000            
      containers:
        - name: scheduler
          imagePullPolicy: Always
          image: ghcr.io/berops/claudie/scheduler
          resources:
            requests:
              cpu: 45m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: /ready
              port: 50056
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /live
              port: 50056
            initialDelaySeconds: 10
            periodSeconds: 30
