manifests/claudie/context-box.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: context-box
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: context-box
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: context-box
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: context-box
    spec:
      terminationGracePeriodSeconds: 300
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: context-box
          imagePullPolicy: Always
          image: ghcr.io/berops/claudie/context-box
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          resources:
            requests:
              cpu: 80m
              memory: 100Mi
            limits:
              cpu: 160m
              memory: 150Mi
          ports:
            - containerPort: 50055
            - name: "metrics"
              containerPort: 9090
          readinessProbe:
            grpc:
              port: 50055
              service: context-box-readiness
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            grpc:
              port: 50055
              service: context-box-liveness
            initialDelaySeconds: 5
            periodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: context-box
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: context-box
spec:
  selector:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: context-box
  ports:
    - protocol: TCP
      port: 50055
      targetPort: 50055
