manifests/claudie/kube-eleven.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-eleven
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: kube-eleven
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: kube-eleven
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: kube-eleven
    spec:
      terminationGracePeriodSeconds: 1320
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: kube-eleven
          imagePullPolicy: Never
          image: ghcr.io/berops/claudie/kube-eleven
          volumeMounts:
            - mountPath: /bin/services/kube-eleven/clusters
              name: data
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - all
          resources:
            requests:
              cpu: 100m
              memory: 120Mi
            limits:
              memory: 200Mi
          ports:
            - containerPort: 50054
            - name: "metrics"
              containerPort: 9090
          readinessProbe:
            grpc:
              port: 50054
              service: kube-eleven-readiness
            initialDelaySeconds: 30
            periodSeconds: 35
          livenessProbe:
            grpc:
              port: 50054
              service: kube-eleven-liveness
            initialDelaySeconds: 30
            periodSeconds: 35
---
kind: Service
apiVersion: v1
metadata:
  name: kube-eleven
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: kube-eleven
spec:
  selector:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: kube-eleven
  ports:
    - protocol: TCP
      port: 50054
      targetPort: 50054
