manifests/claudie/kuber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: kuber
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: kuber
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: kuber
    spec:
      terminationGracePeriodSeconds: 1320
      securityContext:
        # needed by kuber to be able to ping nodes to determine
        # which of them are reachable or not.
        sysctls:
          - name: net.ipv4.ping_group_range
            value: "1 3000"
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: data
          emptyDir: {}
      containers:
        - name: kuber
          imagePullPolicy: Always
          image: ghcr.io/berops/claudie/kuber
          volumeMounts:
            - mountPath: /bin/services/kuber/clusters
              name: data
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - all
          resources:
            requests:
              cpu: 100m
              memory: 150Mi
            limits:
              memory: 700Mi
          ports:
            - containerPort: 50057
            - name: "metrics"
              containerPort: 9090
          readinessProbe:
            grpc:
              port: 50057
              service: kuber-readiness
            initialDelaySeconds: 30
            periodSeconds: 35
          livenessProbe:
            grpc:
              port: 50057
              service: kuber-liveness
            initialDelaySeconds: 30
            periodSeconds: 35
---
kind: Service
apiVersion: v1
metadata:
  name: kuber
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: kuber
spec:
  selector:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: kuber
  ports:
    - protocol: TCP
      port: 50057
      targetPort: 50057
