manifests/claudie/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: manager
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: manager
    spec:
      terminationGracePeriodSeconds: 300
      securityContext:
        # needed by manager to be able to ping nodes to determine
        # which of them are reachable or not.
        sysctls:
          - name: net.ipv4.ping_group_range
            value: "1 3000"
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: temp
          emptyDir: {}
      containers:
        - name: manager
          imagePullPolicy: Never
          image: ghcr.io/berops/claudie/manager
          volumeMounts:
            - mountPath: /tmp
              name: temp
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          resources:
            requests:
              cpu: 80m
              memory: 100Mi
            limits:
              cpu: 160m
          ports:
            - containerPort: 50055
            - name: "metrics"
              containerPort: 9090
          readinessProbe:
            grpc:
              port: 50055
              service: manager-readiness
            initialDelaySeconds: 30
            periodSeconds: 35
          livenessProbe:
            grpc:
              port: 50055
              service: manager-liveness
            initialDelaySeconds: 30
            periodSeconds: 35
      serviceAccountName: manager
---
kind: Service
apiVersion: v1
metadata:
  name: manager
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: manager
spec:
  selector:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: manager
  ports:
    - protocol: TCP
      port: 50055
      targetPort: 50055
