manifests/claudie/terraformer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraformer
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: terraformer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: terraformer
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: terraformer
    spec:
      terminationGracePeriodSeconds: 1320
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      volumes:
        - name: data
          emptyDir: {}
        - name: temp
          emptyDir: {}
        - name: templates
          emptyDir: {}
        - name: cache
          emptyDir: {}
      containers:
        - name: terraformer
          imagePullPolicy: Never
          image: ghcr.io/berops/claudie/terraformer
          volumeMounts:
            - mountPath: /bin/services/terraformer/templates
              name: templates
            - mountPath: /bin/services/terraformer/clusters
              name: data
            - mountPath: /bin/services/terraformer/cache
              name: cache
            - mountPath: /tmp
              name: temp
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          resources:
            requests:
              cpu: 200m
              memory: 1200Mi
            limits:
              memory: 3500Mi
          ports:
            - containerPort: 50052
            - name: "metrics"
              containerPort: 9090
          readinessProbe:
            grpc:
              port: 50052
              service: terraformer-readiness
            initialDelaySeconds: 30
            periodSeconds: 35
          livenessProbe:
            grpc:
              port: 50052
              service: terraformer-liveness
            initialDelaySeconds: 30
            periodSeconds: 35
---
kind: Service
apiVersion: v1
metadata:
  name: terraformer
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: terraformer
spec:
  selector:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: terraformer
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
