manifests/claudie/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: claudie-webhook-allow-ingress
spec:
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    # On OpenShift and OKD, the Kubernetes API server listens on
    # port 6443.
    - port: 6443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0      
  podSelector:
    matchLabels:
      app.kubernetes.io/name: claudie-operator
      app.kubernetes.io/part-of: claudie
  policyTypes:
  - Ingress
