manifests/claudie/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: frontend
    spec:
      terminationGracePeriodSeconds: 30
      serviceAccountName: frontend-sa
      containers:
        - name: frontend
          imagePullPolicy: Always
          image: ghcr.io/berops/claudie/frontend
          resources:
            requests:
              cpu: 25m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 150Mi
          ports:
            - containerPort: 9443
              name: webhook-tls
            - containerPort: 50058
              name: grpc-server                   
          readinessProbe:
            httpGet:
              path: /readyz
              port: 50000
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: 50000
            initialDelaySeconds: 15
            periodSeconds: 30   
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /etc/webhook/certs/
              readOnly: true             
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: claudie-webhook-certificate
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: frontend    
spec:
  selector:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: frontend
  ports:
    - port: 443
      targetPort: webhook-tls
      name: webhook-tls
    - port: 50058
      targetPort: grpc-server    
      name: grpc-server  
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: claudie-webhook
  annotations:
    cert-manager.io/inject-ca-from: claudie/claudie-webhook-certificate
  labels:
    app.kubernetes.io/part-of: claudie      
webhooks:
  - name: validate-manifest.claudie.io
    admissionReviewVersions:
      - "v1beta1"
    sideEffects: "None"
    failurePolicy: Fail
    timeoutSeconds: 10
    clientConfig:
      service:
        name: frontend
        namespace: claudie
        path: "/validate-manifest"
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: ["claudie.io"]
        apiVersions: ["v1beta1"]
        resources: ["inputmanifests"]
        scope: "*"
