manifests/claudie/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claudie-operator
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: claudie-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: claudie
      app.kubernetes.io/name: claudie-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: claudie
        app.kubernetes.io/name: claudie-operator
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      serviceAccountName: claudie-operator-sa
      containers:
        - name: claudie-operator
          imagePullPolicy: Always
          image: ghcr.io/berops/claudie/claudie-operator
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          resources:
            requests:
              cpu: 25m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 150Mi
          ports:
            - containerPort: 9443
              name: webhook-tls
            - containerPort: 50058
              name: grpc-server
          readinessProbe:
            httpGet:
              path: /healthz
              port: 50000
              scheme: HTTP
            initialDelaySeconds: 35
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 50000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /etc/webhook/certs/
              readOnly: true
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: claudie-webhook-certificate
---
apiVersion: v1
kind: Service
metadata:
  name: claudie-operator
  labels:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: claudie-operator
spec:
  selector:
    app.kubernetes.io/part-of: claudie
    app.kubernetes.io/name: claudie-operator
  ports:
    - port: 443
      targetPort: webhook-tls
      name: webhook-tls
    - port: 50058
      targetPort: grpc-server
      name: grpc-server
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: claudie-webhook
  annotations:
    cert-manager.io/inject-ca-from: claudie/claudie-webhook-certificate
  labels:
    app.kubernetes.io/part-of: claudie
webhooks:
  - name: validate-manifest.claudie.io
    admissionReviewVersions:
      - "v1beta1"
    sideEffects: "None"
    failurePolicy: Fail
    timeoutSeconds: 10
    clientConfig:
      service:
        name: claudie-operator
        namespace: claudie
        path: "/validate-manifest"
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["claudie.io"]
        apiVersions: ["v1beta1"]
        resources: ["inputmanifests"]
        scope: "*"
